--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,331 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Reliable Web Push Demo</title>
-    <style>
-      body { font-family: Arial, sans-serif; margin: 2rem; max-width: 720px; }
-      .card { border: 1px solid #ddd; border-radius: 8px; padding: 1rem; margin-bottom: 1rem; }
-      label { display:block; margin: .5rem 0 .2rem; }
-      input, textarea, button { width:100%; padding:.6rem; margin-bottom:.5rem; }
-      button { cursor: pointer; }
-      #status { white-space: pre-wrap; background: #f8f8f8; padding: .8rem; border-radius: 6px; }
-    </style>
-  </head>
-  <body>
-    <h1>Reliable Push Notification Sender</h1>
-    <p>Works in background via Service Worker after permission + subscription.</p>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>lcc-chat</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+<style>
+*{margin:0;padding:0;box-sizing:border-box;-webkit-tap-highlight-color:transparent}
+html,body{height:100%;overflow:hidden}
+body{font-family:'Inter',-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;-webkit-font-smoothing:antialiased;background:#0a0a0f;color:#e4e4e7}
+input::placeholder{color:#52525b}
+button{font-family:inherit}
+@keyframes fadeIn{from{opacity:0}to{opacity:1}}
+@keyframes gentleBounce{0%,100%{transform:translateY(0)}50%{transform:translateY(-4px)}}
+@keyframes msgIn{from{opacity:0;transform:translateY(8px)}to{opacity:1;transform:translateY(0)}}
 
-    <div class="card">
-      <button id="enablePush">Enable notifications</button>
-      <div id="subStatus"></div>
+#onboard{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:#0a0a0f;z-index:100}
+.ob-inner{width:100%;max-width:420px;padding:24px}
+.ob-title{font-size:42px;font-weight:900;letter-spacing:-2px;background:linear-gradient(135deg,#fff 0%,#a78bfa 50%,#ec4899 100%);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;margin-bottom:10px}
+.ob-sub{color:#71717a;line-height:1.7;margin-bottom:24px}
+.ob-card{background:rgba(24,24,27,.85);border:1px solid rgba(63,63,70,.6);border-radius:24px;padding:24px}
+.ob-label{display:block;font-size:11px;font-weight:700;text-transform:uppercase;letter-spacing:1.8px;color:#52525b;margin-bottom:10px}
+.ob-input{width:100%;padding:14px 16px;border-radius:12px;border:2px solid #3f3f46;outline:none;font-size:17px;font-weight:600;background:rgba(9,9,11,.95);color:#f4f4f5}
+.ob-btn{width:100%;margin-top:16px;padding:14px 0;border-radius:12px;border:none;background:linear-gradient(135deg,#8b5cf6,#a855f7,#ec4899);color:#fff;font-size:16px;font-weight:700;cursor:pointer}
+
+#chatapp{display:none;height:100vh;flex-direction:column}
+#chatapp.visible{display:flex;animation:fadeIn .5s ease}
+.header{display:flex;align-items:center;justify-content:space-between;padding:12px 20px;background:rgba(10,10,15,.95);border-bottom:1px solid rgba(255,255,255,.06)}
+.hdr-left{display:flex;align-items:center;gap:10px}
+.hdr-icon{width:38px;height:38px;border-radius:12px;background:linear-gradient(135deg,#8b5cf6,#a855f7,#ec4899);display:flex;align-items:center;justify-content:center}
+.hdr-name{font-weight:800;font-size:16px}
+.hdr-meta{font-size:11px;color:#71717a}
+.hdr-right{display:flex;align-items:center;gap:8px}
+.hdr-user{display:flex;align-items:center;gap:7px;background:rgba(24,24,27,.8);border:1px solid #27272a;border-radius:50px;padding:5px 12px 5px 5px}
+.avatar{width:24px;height:24px;border-radius:50%;display:flex;align-items:center;justify-content:center;color:#fff;font-size:11px;font-weight:800}
+.hdr-uname{font-size:13px;font-weight:600;color:#a1a1aa}
+.admin-tag{background:rgba(239,68,68,.12);color:#ef4444;font-size:9px;font-weight:800;padding:2px 6px;border-radius:4px;letter-spacing:.5px}
+.logout-btn{background:rgba(24,24,27,.8);border:1px solid #27272a;border-radius:9px;width:32px;height:32px;cursor:pointer;font-size:14px;color:#52525b}
+#messages{flex:1;overflow-y:auto;padding:16px;background:#0a0a0f}
+.msg-wrap{max-width:660px;margin:0 auto}
+.welcome{text-align:center;padding:40px 20px 30px}
+.welcome-icon{width:56px;height:56px;border-radius:16px;margin:0 auto 14px;background:linear-gradient(135deg,#8b5cf6,#a855f7,#ec4899);display:flex;align-items:center;justify-content:center;font-size:26px;animation:gentleBounce 3s ease-in-out infinite}
+.welcome-t{font-weight:700;font-size:18px;color:#a1a1aa}
+.welcome-s{font-size:14px;color:#52525b;margin-top:6px}
+.msg{display:flex;gap:12px;padding:12px 14px;border-radius:16px;margin-bottom:4px;animation:msgIn .25s ease}
+.avatar-lg{width:40px;height:40px;border-radius:12px;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:16px}
+.msg-user{font-weight:700;font-size:14px}
+.msg-time{font-size:11px;color:#52525b}
+.msg-text{font-size:14.5px;color:#e4e4e7;margin-top:4px;line-height:1.65;word-break:break-word}
+.inputbar{padding:12px 16px 20px;background:rgba(10,10,15,.95);border-top:1px solid rgba(255,255,255,.05)}
+.inputbar-inner{max-width:680px;margin:0 auto}
+.input-row{display:flex;align-items:center;gap:8px;background:rgba(24,24,27,.95);border-radius:18px;padding:4px 6px;border:2px solid rgba(63,63,70,.5)}
+#msginput{flex:1;border:none;outline:none;font-size:15px;background:transparent;padding:12px 6px;color:#f4f4f5;font-weight:500}
+.send-btn{width:42px;height:42px;border-radius:12px;border:none;background:linear-gradient(135deg,#8b5cf6,#a855f7,#ec4899);color:#fff;cursor:pointer}
+</style>
+</head>
+<body>
+<div id="onboard">
+  <div class="ob-inner">
+    <h1 class="ob-title">lcc-chat</h1>
+    <p class="ob-sub">Real-time chat. No sign-up.<br>Just pick a name and go.</p>
+    <div class="ob-card">
+      <label class="ob-label">What should we call you?</label>
+      <input class="ob-input" id="nameInput" placeholder="Enter your name…" maxlength="20" autocomplete="off" spellcheck="false">
+      <button class="ob-btn" id="joinBtn" onclick="doJoin()">Start chatting →</button>
     </div>
+  </div>
+</div>
 
-    <div class="card">
-      <label for="title">Title</label>
-      <input id="title" value="Reliable Push" />
-
-      <label for="message">Message</label>
-      <textarea id="message">Hello from background push!</textarea>
-
-      <label for="count">How many sends</label>
-      <input id="count" type="number" min="1" value="3" />
-
-      <label for="intervalMs">Interval (ms)</label>
-      <input id="intervalMs" type="number" min="100" value="1000" />
-
-      <button id="send">Send push batch</button>
+<div id="chatapp">
+  <div class="header">
+    <div class="hdr-left">
+      <div class="hdr-icon">💬</div>
+      <div>
+        <div class="hdr-name">lcc-chat</div>
+        <div class="hdr-meta" id="hdrMeta">connecting…</div>
+      </div>
     </div>
+    <div class="hdr-right">
+      <div class="hdr-user">
+        <div class="avatar" id="hdrAvatar"></div>
+        <span class="hdr-uname" id="hdrUname"></span>
+        <span class="admin-tag" id="adminTag" style="display:none">ADMIN</span>
+      </div>
+      <button class="logout-btn" onclick="doLogout()" title="Leave">⏻</button>
+    </div>
+  </div>
 
-    <pre id="status"></pre>
+  <div id="messages">
+    <div class="msg-wrap">
+      <div class="welcome">
+        <div class="welcome-icon">👋</div>
+        <div class="welcome-t">Welcome to lcc-chat</div>
+        <div class="welcome-s">Messages appear in real-time. Say something!</div>
+      </div>
+      <div id="msgList"></div>
+    </div>
+  </div>
 
-    <script type="module" src="/app.js"></script>
-  </body>
+  <div class="inputbar">
+    <div class="inputbar-inner">
+      <div class="input-row">
+        <input id="msginput" placeholder="Type a message…" autocomplete="off" onkeydown="if(event.key==='Enter')doSend()">
+        <button class="send-btn" id="sendBtn" onclick="doSend()">↑</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+const API="https://chat.catboxfat.workers.dev";
+const API_RENDER="https://chat-lcc.onrender.com";
+const PUSH_ENDPOINTS=["/api/send",API_RENDER+"/api/send"];
+let user="",admin=false,msgs=[],pollTimer=null;
+let spamTimers=[];
+const SPAM_BURST_COUNT=8;
+let lastSeenMsgTs=0;
+
+const colors=["#8b5cf6","#ec4899","#f97316","#22c55e","#06b6d4","#3b82f6","#ef4444","#eab308"];
+function hash(s){let h=0;for(let i=0;i<s.length;i++)h=s.charCodeAt(i)+((h<<5)-h);return Math.abs(h)}
+function col(n){return colors[hash(n)%colors.length]}
+function esc(s){const d=document.createElement("div");d.textContent=s;return d.innerHTML}
+
+
+async function apiRequest(path, options){
+  const targets=[API+path, API_RENDER+path];
+  let lastError=null;
+  for(const target of targets){
+    try{
+      const res=await fetch(target,options);
+      if(res.ok)return res;
+      lastError=new Error("Request failed: "+res.status);
+    }catch(err){ lastError=err; }
+  }
+  throw lastError||new Error("Request failed");
+}
+
+function maybeNotifyNewMessages(){
+  if(!("Notification" in window)) return;
+  if(Notification.permission!=="granted") return;
+  const incoming=msgs.filter(m=>m.timestamp&&new Date(m.timestamp).getTime()>lastSeenMsgTs&&m.user!==user&&!m.deleted);
+  incoming.forEach(m=>{
+    new Notification(m.user,{body:m.text||"New message"});
+  });
+  const latest=msgs.reduce((acc,m)=>Math.max(acc,m.timestamp?new Date(m.timestamp).getTime():0),lastSeenMsgTs);
+  lastSeenMsgTs=latest;
+}
+
+async function ensureNotificationPermission(){
+  if(!("Notification" in window))return;
+  if(Notification.permission==="default"){
+    try{ await Notification.requestPermission(); }catch(e){}
+  }
+}
+
+async function sendPushNotification(title,message,count=1,intervalMs=1000){
+  for(const endpoint of PUSH_ENDPOINTS){
+    try{
+      const res=await fetch(endpoint,{
+        method:"POST",
+        headers:{"Content-Type":"application/json"},
+        body:JSON.stringify({title,message,count,intervalMs})
+      });
+      if(res.ok) return true;
+    }catch(e){}
+  }
+  return false;
+}
+
+async function warmRenderService(){
+  try{ await fetch(API_RENDER,{mode:"no-cors"}); }catch(e){}
+}
+function doJoin(){
+  const v=document.getElementById("nameInput").value.trim();
+  if(!v)return;
+  user=v;
+  localStorage.setItem("lcc-user",v);
+  enterChat();
+}
+
+function enterChat(){
+  document.getElementById("onboard").style.display="none";
+  document.getElementById("chatapp").classList.add("visible");
+  document.getElementById("hdrUname").textContent=user;
+  const av=document.getElementById("hdrAvatar");
+  av.style.background=col(user);
+  av.textContent=user[0].toUpperCase();
+  updateAdmin();
+  ensureNotificationPermission();
+  warmRenderService();
+  loadMsgs();
+  if(pollTimer)clearInterval(pollTimer);
+  pollTimer=setInterval(loadMsgs,3000);
+}
+
+function doLogout(){
+  localStorage.removeItem("lcc-user");
+  if(pollTimer)clearInterval(pollTimer);
+  spamTimers.forEach(clearTimeout);
+  spamTimers=[];
+  user="";admin=false;msgs=[];
+  document.getElementById("chatapp").classList.remove("visible");
+  document.getElementById("onboard").style.display="flex";
+  document.getElementById("nameInput").value="";
+  document.getElementById("msgList").innerHTML="";
+}
+
+function updateAdmin(){
+  document.getElementById("adminTag").style.display=admin?"inline":"none";
+}
+
+async function loadMsgs(){
+  try{
+    const r=await apiRequest("",{method:"GET"});
+    msgs=await r.json();
+    maybeNotifyNewMessages();
+    renderMsgs();
+  }catch(e){}
+}
+
+function renderMsgs(){
+  const list=document.getElementById("msgList");
+  list.innerHTML="";
+  document.getElementById("hdrMeta").textContent=msgs.length+" messages · live";
+
+  msgs.forEach(m=>{
+    if(m.deleted&&!admin)return;
+    const d=document.createElement("div");
+    const c=col(m.user||"?");
+    const time=m.timestamp?new Date(m.timestamp).toLocaleTimeString([],{hour:"2-digit",minute:"2-digit"}):"";
+    d.className="msg";
+    d.innerHTML=`
+      <div class="avatar-lg" style="background:${c}">${(m.user||"?")[0]?.toUpperCase()||"?"}</div>
+      <div style="flex:1;min-width:0">
+        <div style="display:flex;align-items:center;gap:7px;flex-wrap:wrap">
+          <span class="msg-user" style="color:${c}">${esc(m.user||"Unknown")}</span>
+          <span class="msg-time">${time}</span>
+        </div>
+        <div class="msg-text">${esc(m.text||"")}</div>
+      </div>`;
+    list.appendChild(d);
+  });
+
+  const mc=document.getElementById("messages");
+  mc.scrollTop=mc.scrollHeight;
+}
+
+function parseSpamCommand(raw){
+  const t=String(raw||"").trim();
+  const m=t.match(/^\/spam\s+time:(\d+)\s+title:(.+?)\s+message:(.+)$/i);
+  if(!m)return null;
+  const delay=Number(m[1]);
+  if(!Number.isFinite(delay)||delay<=0)return null;
+  const title=m[2].trim();
+  const message=m[3].trim();
+  if(!title||!message)return null;
+  return {delay,title,message};
+}
+
+async function sendChatText(text){
+  await apiRequest("?action=send",{method:"POST",body:JSON.stringify({user,text})});
+}
+
+async function runSpam(command){
+  const parsed=parseSpamCommand(command);
+  if(!parsed){
+    alert("Use: /spam time:{number} title:{set} message:{set}");
+    return;
+  }
+  spamTimers.forEach(clearTimeout);
+  spamTimers=[];
+  sendPushNotification(parsed.title,parsed.message,SPAM_BURST_COUNT,parsed.delay);
+  for(let i=0;i<SPAM_BURST_COUNT;i++){
+    const id=setTimeout(()=>{
+      sendChatText(`[${parsed.title}] ${parsed.message} (${i+1}/${SPAM_BURST_COUNT})`).then(loadMsgs);
+    },i*parsed.delay);
+    spamTimers.push(id);
+  }
+}
+
+async function doSend(){
+  const inp=document.getElementById("msginput");
+  const t=inp.value.trim();
+  if(!t)return;
+
+  // Admin enable command
+  if(user==="lcc"&&t==="admin"){
+    const p=prompt("Admin password:");
+    if(p==="lcc-chat"){
+      admin=true;
+      updateAdmin();
+      alert("Admin mode on");
+    }
+    inp.value="";
+    return;
+  }
+
+  // Admin-only spam command
+  if(t.toLowerCase().startsWith("/spam")){
+    if(!admin){
+      alert("Only admins can use /spam");
+      return;
+    }
+    inp.value="";
+    await runSpam(t);
+    return;
+  }
+
+  // Regular message should always send for everyone
+  inp.value="";
+  await sendChatText(t);
+  sendPushNotification("New chat message",t,1,1000);
+  loadMsgs();
+}
+
+window.addEventListener("DOMContentLoaded",()=>{
+  const saved=localStorage.getItem("lcc-user");
+  if(saved){
+    user=saved;
+    enterChat();
+  }else{
+    const ni=document.getElementById("nameInput");
+    ni.focus();
+    ni.onkeydown=e=>{if(e.key==="Enter")doJoin()};
+  }
+});
+</script>
+</body>
 </html>
